# hvppycapture

./: README.md  setup.cfg  setup.py
pyclip2file/api/: decorators.py  mixins.py  plugin.py  registry.py
pyclip2file/app/: find_plugins.py  mainwindow.py  start.py
pyclip2file/plugins/clipboard/: plugin.py
pyclip2file/plugins/clipboardview/: panel.py  plugin.py
pyclip2file/plugins/clipboardwatcher/: plugin.py
pyclip2file/plugins/editor/: editorpanel.py  editorwidget.py  plugin.py
pyclip2file/plugins/fileexporter/: macroexpander.py  panel.py  plugin.py
pyclip2file/plugins/filesaver/: panel.py  plugin.py
pyclip2file/plugins/postprocessor/: engine.py  plugin.py
pyclip2file/plugins/preview/: panel.py  plugin.py
pyclip2file/plugins/scaler/: panel.py  plugin.py
pyclip2file/plugins/scaletransformer/: plugin.py  transformer.py
pyclip2file/plugins/transformer/: basetransformer.py  manager.py  panel.py  plugin.py
pyclip2file/widgets/: layoutbuilder.py  pixmapviewer.py
src/hvppycapture/: __init__.py
src/hvppycapture/api/: mixins.py  plugin.py  registry.py
src/hvppycapture/app/: find_plugins.py  mainwindow.py  start.py
src/hvppycapture/plugins/clipboard/: plugin.py
src/hvppycapture/plugins/clipboardview/: panel.py  plugin.py
src/hvppycapture/plugins/clipboardwatcher/: plugin.py
src/hvppycapture/plugins/editor/: editorwidget.py  plugin.py
src/hvppycapture/plugins/fileexporter/: panel.py  plugin.py
src/hvppycapture/plugins/filesaver/: panel.py  plugin.py
src/hvppycapture/plugins/ocr/: engine.py  plugin.py
src/hvppycapture/plugins/postprocessor/: engine.py  plugin.py
src/hvppycapture/plugins/preview/: panel.py  plugin.py
src/hvppycapture/plugins/scaler/: panel.py  plugin.py
src/hvppycapture/plugins/scaletransformer/: plugin.py  transformer.py
src/hvppycapture/plugins/transformer/: basetransformer.py  manager.py  panel.py  plugin.py
src/hvppycapture/widgets/: layoutbuilder.py
