[metadata]
name = hvppycapture
version = 0.0.4
description = hvppycapture is a program that saves clipboard images to files.
author = hvppycoding
author_email = hvppycoding@gmail.com

[options]
packages = find:
package_dir =
    =src
install_requires = 
    PySide6==6.4.3
    black
    pillow
    pytesseract

[options.packages.find]
where = src

[options.entry_points]
gui_scripts = 
    hvppycapture = hvppycapture.app.start:main
console_scripts = 
    hvppycapture_console = hvppycapture.app.start:main
hvppycapture.plugins =
    clipboard_view = hvppycapture.plugins.clipboardview.plugin:ClipboardViewPlugin
    clipboard_watcher = hvppycapture.plugins.clipboardwatcher.plugin:ClipboardWatcherPlugin
    editor = hvppycapture.plugins.editor.plugin:EditorPlugin
    file_exporter = hvppycapture.plugins.fileexporter.plugin:FileExporterPlugin
    postprocessor = hvppycapture.plugins.postprocessor.plugin:PostProcessorPlugin
    preview = hvppycapture.plugins.preview.plugin:PreviewPlugin
    scale_transformer = hvppycapture.plugins.scaletransformer.plugin:ScaleTransformerPlugin
    transformer = hvppycapture.plugins.transformer.plugin:TransformerPlugin
    ocr = hvppycapture.plugins.ocr.plugin:OcrPlugin
